--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
   --white-07: #efefef;
   --white-08: #f6f6f6;
   --blue: #3180e7;
+  --blue-hover: #1357af;
   --blue-second: #d7e1f0;
   --yellow: #ebab23;
   --green: #52df11;
